# Static-Blame

./: README.md
Dockers/Dependency/: Dockerfile
Dockers/Dependency/Dynamizer/: README.md
Dockers/Dependency/Dynamizer/Dynamizer/: Logging.hs  Main.hs  Module.hs
Dockers/Dependency/Dynamizer/test/: Main.hs
Dockers/Dependency/language-grift/: LICENSE  README.md  language-grift.cabal
Dockers/Dependency/language-grift/Language/Grift/Source/: Utils.hs
Dockers/Dependency/language-grift/Language/Grift/Source/Parser/: WithSourcePos.hs
Dynamizer/: dynamizer.cabal  stack.yaml
Dynamizer/Dynamizer/: CmdOptions.hs  Dynamizable.hs  Lattice.hs  Sampling.hs
Dynamizer/test/Test/: Sampling.hs
grift-exp/: analyse_fps_fns.py  bug-dyn-pre.csv  configuration test.csv  data-collection.csv  dyn-pre,py.py  final report.csv  first on mutants.csv  main-2.py  main.py  new-data-collection.csv  sample-false-negative.py  sample_fp_wdn.txt  size test.csv  spe-fns-v2.csv  spe-fns.csv  spe-fp-extraction.py  spe-fps-v2.csv  spe-fps.csv  spe_fns_waiting_transformed.csv  up-bug-detection-data.csv  up-normal-bug-detection-data.csv  up-normal-pos-bug-detection-data.csv  wdn-fns.csv  wdn-fps.csv
grift-exp/annotation/: spe-fns-finished-work.csv  spe-fns-v2-transformed-work.csv  spe-fps-finished-work.csv  spe-fps-v2-transformed-work.csv  spe_fns_analyse_transformed.csv  spe_fns_want_to_transformed.csv  spe_fps_analyse_transformed.csv  spe_fps_want_to_transformed  spe_fps_want_to_transformed.csv  wdn-fns-transformed-work.csv  wdn-fps-transformed-work.csv
grift-exp/second_annotation/: spe_fns_after_first_transformation.csv  spe_fns_waiting_transformed.csv  spe_fns_work.csv  spe_fps_after_first_transformation.csv  spe_fps_work.csv  spe_wdt_waiting_transformed.csv  wdt_fns_after_first_transformation.csv  wdt_fns_waiting_transformed.csv  wdt_fns_work.csv
language-grift/: stack.yaml
language-grift/Language/Grift/Common/: Pretty.hs  Syntax.hs
language-grift/Language/Grift/Source/: Parser.hs  Pretty.hs  Syntax.hs
src/backend/c/: code-generator.rkt
src/backend/sham/: code-generator.rkt
src/casts/: convert-closures.rkt
src/grift/: syntax-to-grift0.rkt
src/static_blame/: Dockerfile  bug-detector.rkt  flow_analysis.rkt  refinement.rkt  type_flow.rkt  type_flow_generation.rkt
src/static_blame/component/: blame-label.rkt  call.rkt  dynamizer.rkt  exp-file-manage.rkt  stx-seq-loc.rkt
src/static_blame/test/: fake-insert-casts.rkt  grift-read.rkt  interesting_filter.rkt  lattice_test.csv  logtest.txt  mutate-debug.rkt  mutate.rkt  script.rkt  size_config.csv  test.txt  tmp_bug_location.rkt  tmp_test.grift
src/static_blame/test/weird-programs/: bad-let-2.grift  define-1.grift  ebdlet.grift
tests/: log.err
tests/one-off/: test42.bc
